--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -57,9 +57,9 @@
             <artifactId>json</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.microsoft.azure</groupId>
-            <artifactId>azure-storage</artifactId>
-            <version>5.0.0</version>
+            <groupId>com.microsoft.azure.java</groupId>
+            <artifactId>spring-boot-azure-storage-autoconfigure</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.newrelic.agent.java</groupId>
