Updated default storage container names

--- a/web-app/src/main/resources/application.properties
+++ b/web-app/src/main/resources/application.properties
@@ -10,8 +10,8 @@ logging.level.org.hibernate=ERROR
 logging.file=logs/application.log
 
 moviedb.webapp.storageconnectionstring=${STORAGE_CONNECTION_STRING}
-moviedb.webapp.originalImageContainer=${ORIGINAL_IMAGE_CONTAINER:original}
-moviedb.webapp.thumbnailImageContainer=${THUMBNAIL_IMAGE_CONTAINER:thumbnail}
+moviedb.webapp.originalImageContainer=${ORIGINAL_IMAGE_CONTAINER:images-original}
+moviedb.webapp.thumbnailImageContainer=${THUMBNAIL_IMAGE_CONTAINER:images-thumbnail}
 
 spring.http.multipart.max-file-size=20MB
 spring.http.multipart.max-request-size=20MB
