proper log pattern

--- a/data-app/src/main/resources/application-dev.properties
+++ b/data-app/src/main/resources/application-dev.properties
@@ -3,3 +3,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.data.rest.basePath=/api/v1
 spring.datasource.url=jdbc:hsqldb:mem:testdb;sql.syntax_mys=true
 server.port=8090
+
+spring.main.banner-mode=off
+logging.file=/var/log/data-app.log
