integrate azure-webapp-maven-plugin 0.1.3

--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -242,6 +242,93 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-webapp-maven-plugin</artifactId>
+                <version>0.1.3</version>
+                <configuration>
+                    <containerSettings>
+                        <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                        <serverId>${env.ACR_NAME}</serverId>
+                        <registryUrl>https://${env.ACR_LOGIN_SERVER}</registryUrl>
+                    </containerSettings>
+                    <appSettings>
+                        <property>
+                            <name>PORT</name>
+                            <value>${WEBAPP_CONTAINER_PORT}</value>
+                        </property>
+                        <property>
+                            <name>WEB_APP_CONTAINER_PORT</name>
+                            <value>${WEB_APP_CONTAINER_PORT}</value>
+                        </property>
+                        <property>
+                            <name>DATA_API_URL</name>
+                            <value>${DATA_API_URL}</value>
+                        </property>
+                        <property>
+                            <name>STORAGE_CONNECTION_STRING</name>
+                            <value>${STORAGE_CONNECTION_STRING}</value>
+                        </property>
+                        <property>
+                            <name>ORIGINAL_IMAGE_CONTAINER</name>
+                            <value>${ORIGINAL_IMAGE_CONTAINER}</value>
+                        </property>
+                        <property>
+                            <name>THUMBNAIL_IMAGE_CONTAINER</name>
+                            <value>${THUMBNAIL_IMAGE_CONTAINER}</value>
+                        </property>
+                        <property>
+                            <name>REDIS_HOST</name>
+                            <value>${REDIS_HOST}</value>
+                        </property>
+                        <property>
+                            <name>REDIS_PASSWORD</name>
+                            <value>${REDIS_PASSWORD}</value>
+                        </property>
+                    </appSettings>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>with-new-relic</id>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                        <configuration>
+                            <containerSettings>
+                                <imageName>${docker.image.prefix}/${project.artifactId}-w-new-relic</imageName>
+                                <serverId>${env.ACR_NAME}</serverId>
+                                <registryUrl>https://${env.ACR_LOGIN_SERVER}</registryUrl>
+                            </containerSettings>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>with-overops</id>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                        <configuration>
+                            <containerSettings>
+                                <imageName>${docker.image.prefix}/${project.artifactId}-w-overops</imageName>
+                                <serverId>${env.ACR_NAME}</serverId>
+                                <registryUrl>https://${env.ACR_LOGIN_SERVER}</registryUrl>
+                            </containerSettings>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>all</id>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                        <configuration>
+                            <containerSettings>
+                                <imageName>${docker.image.prefix}/${project.artifactId}-w-all</imageName>
+                                <serverId>${env.ACR_NAME}</serverId>
+                                <registryUrl>https://${env.ACR_LOGIN_SERVER}</registryUrl>
+                            </containerSettings>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
