--- a/data-app/src/main/fabric8/deployment.yml
+++ b/data-app/src/main/fabric8/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: "data-app"
-          image: ${docker.image.prefix}/data-app:latest
+          image: ${docker.image.prefix}/data-app:${project.version}
           ports:
             - containerPort: ${container.port}
           resources:
