--- a/data-app/pom.xml
+++ b/data-app/pom.xml
@@ -213,9 +213,17 @@
                 <artifactId>fabric8-maven-plugin</artifactId>
                 <version>3.5.30</version>
                 <configuration>
-                    <!-- <ignoreServices>true</ignoreServices> -->
+                    <ignoreServices>false</ignoreServices>
                     <registry>${docker.image.prefix}</registry>
                 </configuration>
+                <executions>
+                    <execution>
+                    <id>fabric8</id>
+                    <goals>
+                        <goal>resource</goal>
+                    </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
