--- a/data-app/src/main/fabric8/secrets.yml
+++ b/data-app/src/main/fabric8/secrets.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ${docker.image.prefix}
-  namespace: default
+  namespace: ${target.environment}
   annotations:
     maven.fabric8.io/dockerServerId: ${docker.image.prefix}
 type: kubernetes.io/dockercfg
