--- a/deployment/jenkins/docker-slave/Dockerfile
+++ b/deployment/jenkins/docker-slave/Dockerfile
@@ -37,8 +37,9 @@ RUN mv ./kubectl /usr/local/bin/kubectl
 # Install azure cli
 RUN echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ wheezy main" | tee /etc/apt/sources.list.d/azure-cli.list
 RUN apt-key adv --keyserver packages.microsoft.com --recv-keys 417A0893
+RUN apt-get install apt-transport-https
 RUN apt-get update && \
-    apt-get install -y libssl-dev libffi-dev python-dev build-essential apt-transport-https azure-cli
+    apt-get install -y azure-cli
 
 # Install envsubst
 RUN apt-get install -y gettext
