--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -58,8 +58,8 @@
         </dependency>
         <dependency>
             <groupId>com.microsoft.azure</groupId>
-            <artifactId>azure-storage</artifactId>
-            <version>5.0.0</version>
+            <artifactId>azure-storage-spring-boot-starter</artifactId>
+            <version>0.1.7</version>
         </dependency>
         <dependency>
             <groupId>com.newrelic.agent.java</groupId>
