update connection string property name for storage starter

--- a/web-app/src/main/resources/application.properties
+++ b/web-app/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 logging.file=logs/application.log
 
-moviedb.webapp.storageconnectionstring=${STORAGE_CONNECTION_STRING}
+azure.storage.connection-string=${STORAGE_CONNECTION_STRING}
 moviedb.webapp.originalImageContainer=${ORIGINAL_IMAGE_CONTAINER:images-original}
 moviedb.webapp.thumbnailImageContainer=${THUMBNAIL_IMAGE_CONTAINER:images-thumbnail}
 
