--- a/data-app/pom.xml
+++ b/data-app/pom.xml
@@ -17,8 +17,10 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <docker.image.prefix>${env.ACR_LOGIN_SERVER}</docker.image.prefix>
         <newrelic.version>3.37.0</newrelic.version>
+        <docker.image.prefix>${env.ACR_LOGIN_SERVER}</docker.image.prefix>
+        <container.port>${env.DATA_APP_CONTAINER_PORT}</container.port>
+        <target.environment>${env.TARGET_ENV}</target.environment>
     </properties>
 
     <dependencies>
@@ -105,10 +107,13 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.4.11</version>
                 <configuration>
-                    <serverId>${env.ACR_NAME}</serverId>
+                    <serverId>${env.ACR_LOGIN_SERVER}</serverId>
                     <registryUrl>https://${env.ACR_LOGIN_SERVER}</registryUrl>
                     <dockerDirectory>src/main/docker/base</dockerDirectory>
                     <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <imageTags>
+                        <imageTag>${project.version}</imageTag>
+                    </imageTags>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
@@ -202,6 +207,15 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>fabric8-maven-plugin</artifactId>
+                <version>3.5.30</version>
+                <configuration>
+                    <ignoreServices>false</ignoreServices>
+                    <registry>${env.ACR_LOGIN_SERVER}</registry>
+                </configuration>
             </plugin>
         </plugins>
     </build>
