--- a/deployment/jenkins/jenkins-master.yaml
+++ b/deployment/jenkins/jenkins-master.yaml
@@ -38,7 +38,7 @@ items:
         spec:
           containers:
             - name: "jenkins"
-              image: "microsoft/java-on-azure-jenkins-master"
+              image: "microsoft/java-on-azure-jenkins-master:0.1"
               ports:
                 - containerPort: 8080
                 - containerPort: 50000
