--- a/deployment/config.json
+++ b/deployment/config.json
@@ -52,7 +52,7 @@
     {
       "comment": "West Europe region.",
       "key": "WEST_EUROPE",
-      "value": "westeurope"
+      "value": "southcentralus"
     }
   ],
 
@@ -112,7 +112,7 @@
     {
       "comment": "Optional resource group suffix to avoid naming conflict.",
       "key": "GROUP_SUFFIX",
-      "value": ""
+      "value": "Zzj29"
     }
   ]
 }
