Add provision script for jenkins ACS deployment

--- a/deployment/jenkins/jenkins-master.yaml
+++ b/deployment/jenkins/jenkins-master.yaml
@@ -97,6 +97,8 @@ items:
                   mountPath: "/var/run/docker.sock"
                 - name: "jenkins-home"
                   mountPath: "/var/jenkins_home"
+                - name: "ssh-key"
+                  mountPath: "/root/.ssh"
               readinessProbe:
                 httpGet:
                   path: /login
@@ -118,6 +120,12 @@ items:
             - name: "jenkins-home"
               persistentVolumeClaim:
                 claimName: "jenkins"
+            - name: "ssh-key"
+              secret:
+                secretName: "my-secrets"
+                items:
+                  - key: "sshKey"
+                    path: "id_rsa"
 
   - apiVersion: "v1"
     kind: "Service"
