--- a/deployment/config.json
+++ b/deployment/config.json
@@ -52,7 +52,7 @@
     {
       "comment": "West Europe region.",
       "key": "WEST_EUROPE",
-      "value": "southcentralus"
+      "value": "westeurope"
     }
   ],
 
