--- a/function-app/pom.xml
+++ b/function-app/pom.xml
@@ -30,11 +30,11 @@
             <plugin>
                 <groupId>com.microsoft.azure</groupId>
                 <artifactId>azure-functions-maven-plugin</artifactId>
-                <version>0.1.4</version>
+                <version>0.1.6</version>
                 <configuration>
                     <resourceGroup>${env.COMMON_GROUP}</resourceGroup>
-                    <appName>javafunctionapp</appName>
-                    <region>westus2</region>
+                    <appName>${env.FUNCTION_APP}</appName>
+                    <region>${env.EAST_US}</region>
                     <appSettings>
                         <property>
                             <name>FUNCTIONS_EXTENSION_VERSION</name>
