turn on alwayson for azure function

--- a/deployment/arm/function-app.json
+++ b/deployment/arm/function-app.json
@@ -64,7 +64,8 @@
       },
       "properties": {
         "name": "[variables('functionAppPlanName')]",
-        "numberOfWorkers": 1
+        "numberOfWorkers": 1,
+        "alwaysOn": true
       },
       "dependsOn": []
     },
