turn on alwayson for azure function (#41)
* turn on alwayson for azure function

* minor

--- a/deployment/arm/function-app.json
+++ b/deployment/arm/function-app.json
@@ -76,7 +76,10 @@
       "location": "[variables('location')]",
       "properties": {
         "name": "[variables('functionAppName')]",
-        "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', variables('functionAppPlanName'))]"
+        "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', variables('functionAppPlanName'))]",
+        "siteConfig": {
+          "alwaysOn": true
+        }
       },
       "dependsOn": [
         "[resourceId('Microsoft.Storage/storageAccounts', variables('functionStorageName'))]",
